--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 body {
 	margin: 0;
 	font-family: 'Source Sans Pro', sans-serif;
-	background: #fff;
+	background: #292a2d;
 }
 
 body a,
@@ -29,6 +29,7 @@ h3,
 h4,
 h5,
 h6 {
+    color: #777;
 	margin: 0;
 	font-family: 'Source Sans Pro', sans-serif;
 }
@@ -128,7 +129,7 @@ nav ul li {
 /* Styling the links */
 
 nav a {
-   color: #fff;
+   color: #00a8e0;
 	font-weight: 600;
 	letter-spacing: 1px;
 	text-transform: uppercase;
@@ -352,7 +353,7 @@ li > a:only-child:after {
 	z-index: 1;
 	top: 0;
 	left: 0;
-	background: url(../images/fundo.png) no-repeat bottom;
+	background: #fffae6;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -425,7 +426,7 @@ header {
 	}
 }
 .sidenav h1 {
-    color: rgba(255, 255, 255, 0.5);
+    color: #00a8e0;
     font-size: 1.35em;
     line-height: 1.75em;
     margin-top: 1em;
@@ -630,7 +631,6 @@ ul.social_section_1info a:hover {
 }
 .cpy-right {
     padding: 2em 0 0;
-    border-top: solid 2px #efefef;
     margin: 4em 0 0 0;
 }
 #success-message {
